<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="create_account">Don\'t have an account? Sign up Now !</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="height_value">%d cm</string>
    <string name="weight_value">%d kg</string>
    <string name="calorie_value">%d kcal</string>
    <string name="current_calorie_value">Current: %d kCal</string>
    <string name="current_weight_value">Current: %d kg</string>
    <string name="add_food">Add Food</string>
    <!-- Strings used for fragments for navigation -->

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="welcome">Hello %s</string>
    <string name="body_information">Body Information</string>
    <string name="capturedimage">capturedImage</string>
    <string name="select_image">Select Image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_for_a_food">Search for a food</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="close">Close</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="goal_type">Goal Type :</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="caloric_goal">Caloric Goal</string>
    <string name="goal_value">Goal Value</string>
    <string name="your_bmi">Your BMI</string>
    <string name="update_weight">Update Weight</string>
    <string name="goals">Goals</string>
    <string name="update_goals">UPDATE GOALS</string>
    <string name="general_settings">General Settings</string>
    <string name="change_profile_name">Change Profile Name</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="change_gender">Change Gender</string>
    <string name="change_date_of_birth">Change Date of Birth</string>
    <string name="change_height">Change Height</string>
    <string name="change_weight">Change Weight</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="profile_name">Profile Name</string>
    <string name="about_yourself">About Yourself</string>
    <string name="finish">Finish</string>
    <string name="add_item">Add Item</string>

</resources>